objects/Space__c.object
<CustomObject>
    <description>&lt;SPA&gt; - Represents a space that is leased to a retailer ie. Shop, Office, Kiosk or a space configured for a future purpose such as splits and mergers</description>
    <fields>
        <fullName>Abnormal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this the abnormal space flag?  For Finance Use Only.</inlineHelpText>
        <label>Abnormal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AchievedCapitalCashIncentive__c</fullName>
        <formula>LatestAchievedOpportunity__r.ForecastCapitalCashIncentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecast Capital (Cash Incentive) from Latest Achieved Opportunity</inlineHelpText>
        <label>Achieved Capital (Cash Incentive)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AchievedCapitalDesignConstruction__c</fullName>
        <formula>LatestAchievedOpportunity__r.ForecastCapitalDesignConstruction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecast Capital (Design &amp; Construction) from Latest Achieved Opportunity</inlineHelpText>
        <label>Achieved Capital (Design &amp; Construction)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AchievedCapitalLessorWorks__c</fullName>
        <formula>LatestAchievedOpportunity__r.ForecastCapitalLessorWorks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecast Capital (Lessor Works) from Latest Achieved Opportunity</inlineHelpText>
        <label>Achieved Capital (Lessor Works)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualShopOpenDate__c</fullName>
        <formula>LatestAchievedOpportunity__r.ActualShopOpenedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Shop Opening Date from Latest Achieved Opportunity</inlineHelpText>
        <label>Actual Shop Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicableOutgoings__c</fullName>
        <formula>IF(ISPICKVAL(Property__r.Country__c, &apos;New Zealand&apos;),
(CASE(TEXT(Type__c), 
&quot;1&quot;, &quot;Air Con;Council Rates;Land Tax;Water Rates;Operating Expenses;Waste;Food Court;Cafe Court;Rubbish&quot;,
&quot;2&quot;, &quot;Air Con;Council Rates;Land Tax;Water Rates;Operating Expenses;Waste;Food Court;Cafe Court;Rubbish&quot;,
&quot;&quot;)),
(CASE(TEXT(Type__c), 
&quot;1&quot;, &quot;Air Con;Council Rates;Land Tax;Water Rates;Sunday Trade - Air Con;Sunday Trade;Operating Expenses;Emergency Levy;Cleaning&quot;, 
&quot;2&quot;, &quot;Council Rates;Land Tax;Water Rates;Sunday Trade;Operating Expenses;Emergency Levy;Cleaning&quot;, 
&quot;&quot;)))</formula>
        <inlineHelpText>These are defaulted outgoings based on the Property.</inlineHelpText>
        <label>Applicable Outgoings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicableTradingHours__c</fullName>
        <inlineHelpText>Select the applicable trading hours for this Space.</inlineHelpText>
        <label>Applicable Trading Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Merchant</fullName>
                    <default>true</default>
                    <label>General Merchant</label>
                </value>
                <value>
                    <fullName>Restaurant Precinct</fullName>
                </value>
                <value>
                    <fullName>Entertainment and Leisure Precinct</fullName>
                </value>
                <value>
                    <fullName>Retail Concourse</fullName>
                </value>
                <value>
                    <fullName>Retail Interchange</fullName>
                </value>
                <value>
                    <fullName>Interchange Concourse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BackUpTenant__c</fullName>
        <formula>CurrentForecastedOpportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Up Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackupRetailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Back up Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces (Back up Retailer)</relationshipLabel>
        <relationshipName>Spaces1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCategory__c</fullName>
        <description>Billing category to identify the bill code.</description>
        <inlineHelpText>For Finance Use Only.</inlineHelpText>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SpaceBillingCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommittedCapitalDC__c</fullName>
        <formula>LatestAchievedOpportunity__r.TotalDCCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Capital (D&amp;C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommittedCapitalFitoutContribution__c</fullName>
        <formula>LatestAchievedOpportunity__r.FitoutContribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Capital (Fitout Contribution)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommittedCapitalLessorWorks__c</fullName>
        <formula>LatestAchievedOpportunity__r.TotalLessorWorksCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Capital (Lessor Works)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreateInspectionReport__c</fullName>
        <formula>IF( DAY( TODAY() ) = 31 &amp;&amp; MONTH( TODAY() ) = 10 &amp;&amp;  
    CurrentLeaseExpiryDate__c  &gt; ADDMONTHS( TODAY() ,9) &amp;&amp; CurrentLeaseExpiryDate__c &lt;= ADDMONTHS( TODAY() , 11) &amp;&amp; 
	(ISPICKVAL(Type__c, &apos;1&apos;)||ISPICKVAL(Type__c, &apos;2&apos;)) &amp;&amp; 
	NOT( ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;E&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;F&apos;) || 
        	ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;D&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;K&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;M&apos;)), 
	true , 
	IF( CurrentLeaseExpiryDate__c = ADDMONTHS( TODAY() ,9) &amp;&amp;
	   (MONTH(CurrentLeaseExpiryDate__c) != 8 &amp;&amp; MONTH(CurrentLeaseExpiryDate__c) != 9) &amp;&amp;
	   (ISPICKVAL(Type__c, &apos;1&apos;)||ISPICKVAL(Type__c, &apos;2&apos;)) &amp;&amp; 
	    NOT(ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;E&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;F&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;D&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;K&apos;) || ISPICKVAL(CurrentLease__r.LeaseStatus__c , &apos;M&apos;)), 
		true, 
		false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Inspection Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentContribution__c</fullName>
        <formula>CurrentLease__r.CurrentContribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the current capital fit out contribution.</inlineHelpText>
        <label>Current Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentForecastedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Forecasted Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity Space don&apos;t match with Selected space Record.</errorMessage>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Opportunity.Space__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Spaces (Current Forecasted Opportunity)</relationshipLabel>
        <relationshipName>CurrentForecastedOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGrossRent__c</fullName>
        <formula>CurrentLease__r.GrossCurrentRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseCategory__c</fullName>
        <formula>CurrentLease__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseExpiryDate__c</fullName>
        <formula>CurrentLease__r.LeaseEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseJDELeaseID__c</fullName>
        <formula>CurrentLease__r.JDELeaseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease JDE Lease ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseRentCommencement_Date__c</fullName>
        <formula>CurrentLease__r.RentCommencementDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseRiskApplied__c</fullName>
        <formula>CurrentLease__r.Opportunity__r.RiskApplies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This flag is ticked if there is a risk applied Clause associated with this Space. Please contact Retail Admin for any questions.</inlineHelpText>
        <label>Current Lease Risk Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseStartDate__c</fullName>
        <formula>CurrentLease__r.LeaseStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseSubCategory__c</fullName>
        <formula>CurrentLease__r.SuperfineCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentLease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Lease</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Spaces (Current Lease)</relationshipLabel>
        <relationshipName>CurrentLease</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentLeasingSpread__c</fullName>
        <formula>If ((LatestAchievedOpportunity__r.AnnualMinimumRent__c&gt;0),
If(IsPickval(LatestAchievedOpportunity__r.DealType__c,&apos;Net&apos;), (LatestAchievedOpportunity__r.AnnualMinimumRent__c / CurrentLease__r.CurrentRent__c)-1,If(IsPickval(LatestAchievedOpportunity__r.DealType__c,&apos;Semi Gross&apos;), (LatestAchievedOpportunity__r.AnnualMinimumRent__c / CurrentLease__r.SemiGrossCurrentRent__c)-1,If(IsPickval(LatestAchievedOpportunity__r.DealType__c,&apos;Gross&apos;), (LatestAchievedOpportunity__r.AnnualMinimumRent__c / CurrentLease__r.GrossCurrentRent__c)-1,0))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Leasing Spread %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentRent__c</fullName>
        <formula>CurrentLease__r.CurrentRent__c</formula>
        <label>Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentRetailerName__c</fullName>
        <label>Current Retailer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentRetailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Neel 03042018: Updated FieldLabel and FieldName</description>
        <label>Current Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces (Current Tenant)</relationshipLabel>
        <relationshipName>LeasedSpace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentSemiGrossRent__c</fullName>
        <formula>CurrentLease__r.SemiGrossCurrentRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSOutgoingsTable__c</fullName>
        <label>DS Outgoings Table</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DSOutgoingsTable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Neel 03042018: Added</description>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevelopmentImpacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Neel 03042018: Added</description>
        <label>Development Impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DevelopmentType__c</fullName>
        <label>Development Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DevelopmentImpacted__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operational</fullName>
                    <default>true</default>
                    <label>Operational</label>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Mini Project</fullName>
                </value>
                <value>
                    <fullName>None Project</fullName>
                    <isActive>false</isActive>
                    <label>None Project</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmbeddedNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embedded Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingTenantsVacateDate__c</fullName>
        <formula>LatestAchievedOpportunity__r.ExistingTenantsExpectedVacateDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Existing Tenant&apos;s Vacate Date from the latest achieved opportunity</inlineHelpText>
        <label>Existing Tenant&apos;s Vacate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FloorPlanURL__c</fullName>
        <label>Floor Plan URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FloorPlan__c</fullName>
        <label>Floor Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ForecastAchievedDate__c</fullName>
        <label>Forecast Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastCapitalContribution__c</fullName>
        <label>Forecast Capital (Contribution)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCapitalDesignConstruction__c</fullName>
        <label>Forecast Capital (Design &amp; Construction)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCapitalLessorWorks__c</fullName>
        <label>Forecast Capital (Lessor Works)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastComments__c</fullName>
        <label>Forecast Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ForecastDealtype__c</fullName>
        <label>Forecast Deal type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DealType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastOpportunityVirtualVacancy__c</fullName>
        <formula>TEXT(CurrentForecastedOpportunity__r.CurrentLeaseVirtualVacancy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Lease Virtual Vacancy from the Current Forecasted Opportunity</inlineHelpText>
        <label>Forecast Opportunity Virtual Vacancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastPayout__c</fullName>
        <label>Forecast Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastPromotionalAllowance__c</fullName>
        <label>Forecast Promotional Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastRentCommencementDate__c</fullName>
        <label>Forecast Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastRentTerminationDate__c</fullName>
        <label>Forecast Rent Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastRent__c</fullName>
        <label>Forecast Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastedShopOpenDate__c</fullName>
        <formula>LatestAchievedOpportunity__r.ProposedShopOpeningDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proposed Shop Opening Date for the Latest Achieved Opportunity</inlineHelpText>
        <label>Forecasted Shop Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FutureRetailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Future Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces (Future Retailer)</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FutureTenant__c</fullName>
        <formula>LatestAchievedOpportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeldVacantSpace__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Finance Use Only.</inlineHelpText>
        <label>Held Vacant Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatestAchievedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Achieved Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity Space don&apos;t match with Selected space Record.</errorMessage>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Opportunity.Space__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Spaces (Latest Achieved Opportunity)</relationshipLabel>
        <relationshipName>LatestAchievedOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Budget</label>
        <referenceTo>SpaceBudgetAndForecast__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestBudgetedCapital__c</fullName>
        <formula>LatestBudget__r.TotalCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total capital which includes D&amp;C and capital contribution.</inlineHelpText>
        <label>Latest Budgeted Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestBudgetedGrossRent__c</fullName>
        <formula>LatestBudget__r.AnnualisedRentDecGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV gross rent.</inlineHelpText>
        <label>Latest Budgeted Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestBudgetedNetRent__c</fullName>
        <formula>LatestBudget__r.AnnualisedRentDecNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Budgeted Net Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestBudgetedRent__c</fullName>
        <formula>CASE( LatestBudget__r.BudgetedDealType__c, 
&quot;Net&quot;, LatestBudget__r.AnnualisedRentDecNet__c, 
&quot;Semi Gross&quot;, LatestBudget__r.AnnualisedRentDecSemiGross__c, 
&quot;Gross&quot;,LatestBudget__r.AnnualisedRentDecGross__c, 
LatestBudget__r.AnnualisedRentDecNet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV rent based on budget deal type.</inlineHelpText>
        <label>Latest Budgeted Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestBudgetedSemiGrossRent__c</fullName>
        <formula>LatestBudget__r.AnnualisedRentDecSemiGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV semi gross rent.</inlineHelpText>
        <label>Latest Budgeted Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Forecast</label>
        <referenceTo>SpaceBudgetAndForecast__c</referenceTo>
        <relationshipLabel>Spaces (Latest Forecast)</relationshipLabel>
        <relationshipName>Spaces2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestForecastedCapital__c</fullName>
        <formula>LatestForecast__r.TotalCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecastedGrossRent__c</fullName>
        <formula>LatestForecast__r.AnnualisedPVRentGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecastedNetRent__c</fullName>
        <formula>LatestForecast__r.AnnualisedPVRentNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Net Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecastedPayout__c</fullName>
        <formula>LatestForecast__r.PayoutAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecastedRent__c</fullName>
        <formula>CASE( LatestForecast__r.BudgetedDealType__c, 
&quot;Net&quot;, LatestForecast__r.AnnualisedRentDecNet__c, 
&quot;Semi Gross&quot;, LatestForecast__r.AnnualisedRentDecSemiGross__c, 
&quot;Gross&quot;,LatestForecast__r.AnnualisedRentDecGross__c, 
LatestForecast__r.AnnualisedRentDecNet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestForecastedSemiGrossRent__c</fullName>
        <formula>LatestForecast__r.AnnualisedPVRentSemiGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Forecasted Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestJVBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest JV Budget</label>
        <referenceTo>SpaceBudgetAndForecast__c</referenceTo>
        <relationshipLabel>Spaces (Latest JV Budget)</relationshipLabel>
        <relationshipName>Spaces1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestJVBudgetedCapital__c</fullName>
        <formula>LatestJVBudget__r.TotalCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total capital which includes D&amp;C and capital contribution.</inlineHelpText>
        <label>Latest JV Budgeted Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestJVBudgetedGrossRent__c</fullName>
        <formula>LatestJVBudget__r.AnnualisedRentDecGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV gross rent for Financial Year JV.</inlineHelpText>
        <label>Latest JV Budgeted Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestJVBudgetedNetRent__c</fullName>
        <formula>LatestJVBudget__r.AnnualisedRentDecNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest JV Budgeted Net Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestJVBudgetedRent__c</fullName>
        <formula>CASE( LatestJVBudget__r.BudgetedDealType__c, 
&quot;Net&quot;, LatestJVBudget__r.AnnualisedRentDecNet__c, 
&quot;Semi Gross&quot;, LatestJVBudget__r.AnnualisedRentDecSemiGross__c, 
&quot;Gross&quot;,LatestJVBudget__r.AnnualisedRentDecGross__c, 
LatestJVBudget__r.AnnualisedRentDecNet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV rent based on Financial Year JV budget deal type.</inlineHelpText>
        <label>Latest JV Budgeted Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LatestJVBudgetedSemiGrossRent__c</fullName>
        <formula>LatestJVBudget__r.AnnualisedRentDecSemiGross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the annualised PV semi gross rent for Financial Year JV Centre.</inlineHelpText>
        <label>Latest JV Budgeted Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Stretch_Rent_Gross__c</fullName>
        <formula>LatestBudget__r.Annualised_Stretch_Rent_Gross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Stretch Rent (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Stretch_Rent_Net__c</fullName>
        <formula>LatestBudget__r.Annualised_Stretch_Rent_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Stretch Rent (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Stretch_Rent_Semi_Gross__c</fullName>
        <formula>LatestBudget__r.Annualised_Stretch_Rent_Semi_Gross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Stretch Rent (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainFloor__c</fullName>
        <label>Main Floor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Floor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NeighboringPlan__c</fullName>
        <label>Neighboring Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>No_Of_Space_Groups__c</fullName>
        <label>No. Of Space Groups</label>
        <summaryFilterItems>
            <field>SpaceGroup__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SpaceGroup__c.ParentSpace__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NonStandardEPClass__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Finance Use Only.</inlineHelpText>
        <label>Non Standard EP Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfProducts__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>SpaceProduct__c.Space__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>